# fundie

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  AGENTS.md  CMakeLists.txt  README.md  Untitled.ipynb  asset.h  debug.cpp  debug.h  fund.cpp  fund.h  main.cpp  meson.build  portfolio.h  position.cpp  position.h  round.cpp  round.h  scenario.h  stage.cpp  stage.h  summarize.ipynb  types.h
test/: test_fund.cpp  test_position.cpp  test_stage.cpp
